[package]
name = "zenn_rss"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2"] }
http = "1.4.0"
reqwest = "0.13.1"
rss = "2.0.12"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors"] }
